# learningrepo

./: .gitignore  README.MD
crm-project/: .gitignore  add_constraints.sql  config.py  data_loader.py  data_structures.py  generate_test_data.py  leads_large.csv  leads_sample.csv  logging_config.py  pyproject.toml  query_runner.py  run_pipeline.py  schema.sql  setup_database.py  test_connection.py  test_csv.py  test_queries.py
crm-project/archive/: all_leads_export.csv  analytics_report.py  apply_constraints.py  debug_connection.py  error_report.csv  loader_challenge.py  queries.sql  test.py  test_validation.csv  test_validation.py  validation_report.py  verify_data.py
crm-project/data/archive/20260125/: invalid_leads.csv  sales_team_east.csv  sales_team_south.csv  sales_team_west.csv
crm-project/data/failed/: invalid_invalid_leads.csv  invalid_sales_team_east.csv  invalid_sales_team_south.csv  invalid_sales_team_west.csv
crm-project/data/processed/: valid_sales_team_east.csv  valid_sales_team_south.csv  valid_sales_team_west.csv
crm-project/reports/daily/: leads_by_industry.csv  leads_by_status.csv
crm-project/reports/errors/: data_quality_report.csv
crm-project/src/: data_loader.py  pipeline.py  query_runner.py  validator.py
week1_python_oop/exercises/: classes.py  context_manager.py  exercise1.py  generators.py  mistake_ex1.py  modify_list.py  references_vs_copies.py  self.py
